--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,10 +1,26 @@
-
-
 // @media (prefers-color-scheme: dark) {
 
 // }
 
+:root {
+  --black: #232323;
+  --selected: #f69c4b;
+  --btn: #ce5905;
+  --btn-hover: #e67a3b;
+  --checkbox-checked: #106ef2;
+  --bg: #e5e5e5;
+  --gray: #6c6c6c;
+  --white: #ffffff;
+  --divider: #c2c2c2;
+}
+* {
+  font-family: "Roboto", sans-serif;
+  &.he {
+    direction: rtl;
+  }
+}
 
-// body {
-
-// }
+body {
+  color: var(--black);
+  background-color: var(--bg);
+}
