--- a/src/assets/reset.scss
+++ b/src/assets/reset.scss
@@ -1,4 +1,3 @@
-
 /* Box sizing rules */
 *,
 *::before,
@@ -14,14 +13,24 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin-block-end: 0;
+  padding: 0;
+  margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -29,17 +38,26 @@ ol[role='list'] {
 body {
   min-height: 100vh;
   line-height: 1.5;
+  margin: 0;
+  padding: 0;
 }
 
 /* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
   line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   text-wrap: balance;
 }
 
@@ -48,7 +66,9 @@ a:not([class]) {
   text-decoration-skip-ink: auto;
   color: currentColor;
 }
-
+a {
+  text-decoration: none;
+}
 /* Make images easier to work with */
 img,
 picture {
@@ -57,8 +77,10 @@ picture {
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
+input,
+button,
+textarea,
+select {
   font-family: inherit;
   font-size: inherit;
 }
@@ -72,4 +94,3 @@ textarea:not([rows]) {
 :target {
   scroll-margin-block: 5ex;
 }
-
