--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -12,8 +12,8 @@
   --gray: #6c6c6c;
   --white: #ffffff;
   --divider: #c2c2c2;
-  --home-bg-img: url("Images/home-page/Home-bg.svg");
-  --home-bg-img-dark: url("Images/home-page/Home-bg-dark.svg");
+  --home-bg-img: url("imgs/home-page/Home-bg.svg");
+  --home-bg-img-dark: url("imgs/home-page/Home-bg-dark.svg");
 }
 * {
   &.he {
