--- a/src/assets/reset.scss
+++ b/src/assets/reset.scss
@@ -84,6 +84,9 @@ select {
   font-family: inherit;
   font-size: inherit;
 }
+button{
+  cursor: pointer;
+}
 
 /* Make sure textareas without a rows attribute are not tiny */
 textarea:not([rows]) {
