--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -22,16 +22,23 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('/fonts/Roboto-VariableFont_wdth,wght.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-stretch: 75% 125%;
   font-style: normal;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   background-color: var(--bg);
 }
-
+.btn {
+  color: var(--white);
+  background-color: var(--btn);
+  border: none;
+  &:hover {
+    background-color: var(--btn-hover);
+  }
+}
