--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -33,6 +33,9 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   background-color: var(--bg);
+  -webkit-overflow-scrolling: touch;
+  scrollbar-color: #e7581a var(--bg);
+  scrollbar-width: thin;
 }
 .btn {
   color: var(--white);
