some default style

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -43,6 +43,9 @@ body {
   color: var(--white);
   background-color: var(--btn);
   border: none;
+  padding: 10px 20px;
+  border-radius: 11px;
+  font-weight: 600;
   &:hover {
     background-color: var(--btn-hover);
   }
