--- a/src/assets/reset.scss
+++ b/src/assets/reset.scss
@@ -30,7 +30,8 @@ dd {
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
-ol[role="list"] {
+ol[role="list"],
+li {
   list-style: none;
 }
 
@@ -84,7 +85,7 @@ select {
   font-family: inherit;
   font-size: inherit;
 }
-button{
+button {
   cursor: pointer;
 }
 
